fix(style): Remove border to align cursor with placeholder

--- a/src/components/ReplyField/ReplyField.scss
+++ b/src/components/ReplyField/ReplyField.scss
@@ -3,6 +3,10 @@
 .ba-ReplyField {
     @import '~draft-js/dist/Draft';
 
+    .DraftEditor-editorContainer {
+        border-left: none;
+    }
+
     .public-DraftEditorPlaceholder-hasFocus,
     .public-DraftEditorPlaceholder-root {
         margin: 0;
